Bug 436003 - Missing keyboard shortcut for "Go to Previous/Next Unsolved Conflict"
Summary: Missing keyboard shortcut for "Go to Previous/Next Unsolved Conflict"
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 0.9.97
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: michael
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-21 14:33 UTC by Dawid Ferenczy
Modified: 2021-05-13 20:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dawid Ferenczy 2021-04-21 14:33:30 UTC
Navigation actions "Go to Previous/Next Delta" and "Go to Previous/Next Conflict" all have keyboard shortcuts assigned, but, in my opinion, the most important one, "Go to Previous/Next Unsolved Conflict" doesn't have any and it's not possible to configure by the user.

It would be great to have such shortcut because it's the most used action in KDiff3 when solving a merge conflict for me. I'm usually interested in unsolved conflicts only as there may be many solved ones that I want to skip.

Of course, the best option would be to have keyboard shortcuts configurable, but to have it hardcoded is better than nothing.

I hope I'm not too naive, but it should be pretty easy to set it in the `src/kdiff3.cpp`, shouldn't it? Would you accept a pull request if I do it? And what shortcut would be the best to use? What about Ctrl + Shift + PgUp/PgDown (like "Go to Previous/Next Conflict", but with a Shift)?


SOFTWARE/OS VERSIONS

KDiff3: 0.9.98 (64 bit)
Windows: 10
Qt Version: 5.3.0
Comment 1 michael 2021-04-23 01:41:02 UTC
First of the lack of configurablity has been fixed in 1.8+ which is now built with kf5 not just qt. Second you are more the welcome to submit a mr for assigning a default.
Comment 2 michael 2021-05-13 20:13:54 UTC
Git commit f228be5c153d7db649108094860891860b1303d8 by Michael Reeves.
Committed on 13/05/2021 at 19:08.
Pushed by mreeves into branch '1.9'.

Add default shortcut for "Go to [Previous/Next] Unsolved Conflict"
FIXED-IN:1.9.1

M  +2    -2    src/kdiff3.cpp

https://invent.kde.org/sdk/kdiff3/commit/f228be5c153d7db649108094860891860b1303d8
Comment 3 michael 2021-05-13 20:17:01 UTC
Git commit 0003f6d7255d3b2ba08446137b4469e075714392 by Michael Reeves.
Committed on 13/05/2021 at 20:15.
Pushed by mreeves into branch 'master'.

Add default shortcut for "Go to [Previous/Next] Unsolved Conflict"

(cherry picked from commit f228be5c153d7db649108094860891860b1303d8)

M  +2    -2    src/kdiff3.cpp

https://invent.kde.org/sdk/kdiff3/commit/0003f6d7255d3b2ba08446137b4469e075714392