Add default shortcut for "Go to [Previous/Next] Unsolved Conflict"

BUG:436003
FIXED-IN:1.9.1